<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green_405555"
        android:gravity="center"
        android:text="@string/information"
        android:textColor="@color/green_BDDD5E"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:text="@string/name"
        app:layout_constraintBottom_toBottomOf="@+id/edtName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInformation" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/hint_name_greater_than_three"
        android:hint="@string/hint_name_greater_than_three"
        android:inputType="text"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInformation" />

    <TextView
        android:id="@+id/tvCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:text="@string/card"
        app:layout_constraintBottom_toBottomOf="@+id/edtCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtName" />

    <EditText
        android:id="@+id/edtCard"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/hint_enter_nine_digits"
        android:hint="@string/hint_enter_nine_digits"
        android:inputType="text"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtName" />

    <TextView
        android:id="@+id/tvDegree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_1E5495"
        android:gravity="center"
        android:text="@string/degree"
        android:textColor="@color/green_D1E39C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCard" />

    <RadioGroup
        android:id="@+id/rgDegree"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDegree">

        <RadioButton
            android:id="@+id/rbHighSchool"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/high_school" />

        <RadioButton
            android:id="@+id/rbCollege"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/college" />

        <RadioButton
            android:id="@+id/rbUniversity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/university" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvInterest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_1E5495"
        android:gravity="center"
        android:text="@string/interest"
        android:textColor="@color/green_D1E39C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgDegree" />

    <CheckBox
        android:id="@+id/cbReadPaper"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/read_paper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInterest" />

    <CheckBox
        android:id="@+id/cbReadBook"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/read_book"
        app:layout_constraintStart_toEndOf="@+id/cbReadPaper"
        app:layout_constraintTop_toBottomOf="@+id/tvInterest" />

    <CheckBox
        android:id="@+id/cbReadCoding"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/read_coding"
        app:layout_constraintStart_toEndOf="@+id/cbReadBook"
        app:layout_constraintTop_toBottomOf="@+id/tvInterest" />

    <TextView
        android:id="@+id/tvMoreInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_1E5495"
        android:gravity="center"
        android:text="@string/more_information"
        android:textColor="@color/green_D1E39C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbReadCoding" />

    <EditText
        android:id="@+id/edtMoreInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/hint_more_information_hint"
        android:hint="@string/hint_more_information_hint"
        android:inputType="text"
        android:paddingVertical="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMoreInformation" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_information"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtMoreInformation" />
</androidx.constraintlayout.widget.ConstraintLayout>
