<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingTop="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNumberOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_one"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtNumberOne"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:autofillHints="@string/hint_number_one"
            android:hint="@string/hint_number_one"
            android:inputType="number"
            android:textSize="21sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNumberTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_two"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtNumberTwo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:autofillHints="@string/hint_number_two"
            android:hint="@string/hint_number_two"
            android:inputType="number"
            android:textSize="21sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAddition"
            style="@style/ShapeAppearanceOverlay.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/addition" />

        <Button
            android:id="@+id/btnSubtraction"
            style="@style/ShapeAppearanceOverlay.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/subtraction" />

        <Button
            android:id="@+id/btnMultiplication"
            style="@style/ShapeAppearanceOverlay.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/multiplication" />

        <Button
            android:id="@+id/btnDivision"
            style="@style/ShapeAppearanceOverlay.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/division" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result" />
</LinearLayout>
