<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:elevation="10dp">

    <TextView
        android:id="@+id/tvPickImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="20dp"
        android:text="@string/pick_image"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_select"
        android:elevation="10dp"
        android:gravity="center"
        android:text="@string/camera"
        app:drawableTopCompat="@drawable/ic_camera"
        app:layout_constraintEnd_toStartOf="@id/tvLibrary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPickImage" />


    <TextView
        android:id="@+id/tvLibrary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_button_select"
        android:elevation="10dp"
        android:gravity="center"
        android:text="@string/library"
        app:drawableTopCompat="@drawable/ic_library"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvCamera"
        app:layout_constraintTop_toBottomOf="@id/tvPickImage" />
</androidx.constraintlayout.widget.ConstraintLayout>